@@ -3,12 +3,13 @@
 ##
 
 %common
-    MODULE_NAMES="db lua zlib file xar"
+    MODULE_NAMES="db lua zlib file xar lzma"
     MODULE_TAG_DB=""
     MODULE_TAG_LUA=""
     MODULE_TAG_ZLIB=""
     MODULE_TAG_FILE=""
     MODULE_TAG_XAR=""
+    MODULE_TAG_LZMA=""
 
 %checkout
     for name in $MODULE_NAMES "$@"; do
@@ -70,6 +71,7 @@
         --with-db=internal \
         --with-db-tools-integrated \
         --with-zlib=internal \
+        --with-lzma=internal \
         --with-file=internal \
         --with-lua=internal \
         --with-sqlite=external \
