@@ -31,6 +31,7 @@ endif
 librpmmisc_la_LDFLAGS += \
 	@WITH_DB_LDFLAGS@ \
 	@WITH_ZLIB_LDFLAGS@ \
+	@WITH_LZMA_LDFLAGS@ \
 	@WITH_LUA_LDFLAGS@ \
 	@WITH_FILE_LDFLAGS@ \
 	@WITH_XAR_LDFLAGS@
@@ -38,6 +39,7 @@ librpmmisc_la_LIBADD = \
 	@ALLOCA@ \
 	@WITH_DB_LIBS@ \
 	@WITH_ZLIB_LIBS@ \
+	@WITH_LZMA_LIBS@ \
 	@WITH_LUA_LIBS@ \
 	@WITH_FILE_LIBS@ \
 	@WITH_XAR_LIBS@
